[metadata]
# replace with your username:
name = MLabsPy
version = 0.0.1
url = https://github.com/salamcast/MLabsPy
author = Abu Khadeejah Karl
author_email = salamcast@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
description = MLabsPy is a numpy based parser for the Motion Labs Power Monitor
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6